# Karting-Time

./: .gitignore  Cargo.toml  Makefile.toml  NOTES.md  README.md  lint.sh  release.sh  run.bat  run.ps1  run.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: continous_integration.yml  release.yml  rust_ci.yml
file_io_test_files/: acc_file_1.json  acc_file_2.json  laptime_file_test.txt  laptime_file_test_collection_1.json  laptime_file_test_collection_1.toml  laptime_file_test_collection_2.json  laptime_file_test_collection_2.toml  laptime_file_test_collection_3.json  laptime_file_test_object_collection.json  laptime_file_test_object_collection.toml
src/: main.rs  table.rs
src/commands/: karting_time_messages.rs  messages.rs  mod.rs  tab_identifier.rs  tab_identifiers.rs
src/controllers/: converters.rs  driver_profile.rs  file.rs  file_io.rs  filter_race_results.rs  filters.rs  mod.rs  race_results.rs  time_parser.rs
src/controllers/converters/: laptime_converter.rs  time_parser.rs
src/controllers/driver_profile/: driver_statisics.rs  filter_race_results.rs  profile_statisics.rs  profile_statistics.rs  sort_races.rs  time_parser.rs  upsert_race.rs
src/controllers/file/: file_application.rs  file_integration.rs  file_io.rs  file_picker.rs  html_converter.rs
src/controllers/files/: file.rs  file_io.rs  file_picker.rs  mod.rs
src/controllers/filters/: filter_race_results.rs  paginate_race_results.rs
src/controllers/race_results/: calculate_race_time_summaries.rs  display_race_results.rs  display_race_summary.rs  edit_existing_race.rs  laptime_converter.rs  race_results_summary.rs  race_time_summaries.rs  update_existing_race.rs  upsert_race.rs
src/data_models/: driver_profile_file.rs  karting_time_file.rs  mod.rs  profile_file.rs  race_file.rs  race_information_file.rs  race_result_file.rs
src/models/: date.rs  mod.rs
src/models/application/: application_state.rs  karting_time.rs  mod.rs  race_editor.rs
src/models/driver/: driver_profile.rs  filter.rs  mod.rs  profile_statistics.rs  race_information.rs  race_result.rs  session.rs
src/models/driver_profile/: profile.rs
src/models/driver_results/: lap.rs  mod.rs  race_editor.rs  race_file.rs  race_information.rs  race_result.rs
src/models/filters/: filter.rs  pagination.rs
src/views/: driver_results.rs  filter.rs  mod.rs  race_editing.rs  race_results.rs
src/views/application/: application_state.rs  filter_race_results.rs  filter_results.rs  input_parser.rs  karting_time.rs  karting_time_messages.rs  menu.rs  menu_bar.rs  mod.rs  search_bar.rs  tab_bar.rs  tab_bar_view.rs
src/views/driver/: edit_driver_profile.rs  mod.rs  overview_driver_profile.rs  (+3 more)
(+22 files in other folders)
