[package]
name = "karting-time"
version = "0.9.1"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Karting-Time"
repository = "https://github.com/Steelstone3/Karting-Time"
license = "GPLv3"
readme = "README.md"
include = []

# [lint]
# deny = [
#     "clippy::unwrap_used",
#     "clippy::expect_used",
#     "clippy::panic",
#     "unused_must_use",
# ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
rstest = "0"

[dependencies]
iced = "0.13"
iced_aw = "0.12"
toml = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0"
comfy-table = "7"
rfd = "0"
